<resources>
    <string name="app_name">Piwigo</string>
    <string name="gen_error">Failure</string>
    <string name="comma">, </string>
    <string name="title_activity_main" translatable="false">@string/app_name</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_accounts">Manage Accounts</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_privacy_policy" translatable="false">@string/about_text_privacy_h</string>
    <string name="title_select_image">Select Image</string>
    <string name="nav_icon_description">Piwigo logo</string>
    <string name="nav_server_version">Server Version: %1$s</string>
    <string name="nav_albums">Albums</string>
    <string name="nav_upload">Upload</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_about" translatable="false">@string/title_activity_about</string>
    <string name="nav_privacy" translatable="false">@string/about_text_privacy_h</string>
    <string name="nav_add_account">Add account</string>
    <string name="nav_delete_account">Remove account</string>
    <string name="nav_edit_account">Edit account</string>
    <string name="nav_manage_accounts" translatable="false">@string/title_activity_accounts</string>
    <string name="nav_drawer_open">Open navigation</string>
    <string name="nav_drawer_close">Close navigation</string>
    <string name="star" translatable="false"> <font color='#ff7700'>*</font></string>
    <string name="login_url_hint">My Piwigo\'s web address</string>
    <string name="login_url_how_to">\nFill this field with the URL that you use in a web browser to access your piwigo gallery.\n\nIf you are a piwigo.com client, it looks something like: <font color='#ff7700'>example.piwigo.com</font> .\n\nIf you are self-hosted you have your own domain name and maybe a sub-directory like: <font color='#ff7700'>example.com/photos</font> .</string>
    <string name="login_url_empty">Please enter your Piwigo\'s web address</string>
    <string name="login_url_invalid">Not a valid Piwigo web address</string>
    <string name="login_username_empty">Enter your username</string>
    <string name="login_username_hint">Username</string>
    <string name="login_button_description">Login</string>
    <string name="login_password_empty">Enter your password</string>
    <string name="login_password_hint">Password</string>
    <string name="login_error">Login failed</string>
    <string name="login_account_error">An account for this server already exists</string>
    <string name="login_ssl_error">Encrypted connection (SSL) to \'%1s\' cannot be established</string>
    <string name="login_host_error">Host \'%1s\' could not be reached, please check site address</string>
    <string name="login_http_error">Server returned unexpected response \'%1s\'</string>
    <string name="login_http_404_error">Given path \'%1s\' not found on server</string>
    <string name="login_baseurl_invalid">No Piwigo gallery found at given path \'%1s\'</string>
    <string name="login_invalid_credentials">Login failed for given username \'%1s\'</string>
    <string name="login_as_guest_hint">Leave username and password empty to connect as a guest</string>
    <string name="login_retry_with_http">Use insecure http?</string>
    <string name="account_name" translatable="false">%1$s@%2$s</string>
    <string name="account_image_description">Shortcut icon of the gallery (favicon)</string>
    <string name="account_not_selected">Select an account for deletion first</string>
    <string name="account_empty_message">Empty account!</string>
    <string name="about_text_version">version <b>%1$s</b></string>
    <string name="about_text_intro"> - access Piwigo galleries from your Android phone.</string>
    <string name="about_text_licence_h">License</string>
    <string name="about_text_licence"><![CDATA[%1$s is free software: you can redistribute it and/or modify it under the terms of the <a href="https://www.gnu.org/licenses/gpl-3.0.en.html">GNU General Public License</a>]]></string>
    <string name="about_text_license_2">This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for more details.</string>
    <string name="about_text_privacy_h">Privacy Policy</string>
    <string name="about_text_privacy"><![CDATA[%1$s and its authors have a deep interest to respect your privacy. Therefore this app is designed to not track your behaviour and keep your data in your hands. It is recommended to host your Piwigo gallery by yourself and use only encrypted connections via HTTPS. Read the full <a href=\"org.piwigo.privacy_policy://show\">privacy policy</a>.]]></string>
    <string name="about_text_contact_h">Contact</string>
    <string name="about_text_contact"><![CDATA[For bugs and suggestions use the <a href="https://github.com/Piwigo/Piwigo-Android/issues">issue tacker</a>, preferably in English language.]]></string>
    <string name="about_text_contact_2"><![CDATA[Source code can be found on <a href="https://github.com/Piwigo/Piwigo-Android">Github</a>.]]></string>
    <string name="about_text_contact_3"><![CDATA[Discussions should take place in the <a href="https://piwigo.org/forum/">Piwigo Forum</a>.]]></string>
    <string name="about_text_contact_4"><![CDATA[For anything you want to tell us privately send an email to <a href="mailto:android@piwigo.org">android@piwigo.org</a>.]]></string>
    <string name="about_text_support_h">Contribution</string>
    <string name="about_text_support"><![CDATA[In case you want to support the development of %1$s consider discussing <a href="https://github.com/Piwigo/Piwigo-Android/issues">issues on github</a> or submitting <a href="https://github.com/Piwigo/Piwigo-Android/pulls">pull requests</a>.]]></string>
    <string name="about_text_ack_h">Acknowledgements</string>
    <string name="about_text_ack_2">We are looking forward to mention your name in this list, too.</string>
    <string name="about_text_lib_h">Libraries</string>
    <string name="about_text_lib">The following libraries are used by this application and licensed under the named licenses:</string>
    <string name="contributors" translatable="false"><![CDATA[
        <p><a href="https://github.com/Philio">Phil Bayfield</a></p>
        <p><a href="https://www.raphael-mack.de">Raphael Mack</a></p>
        <p><a href="https://github.com/jeff-amn">Jeff Ayers</a></p>
        <p><a href="https://github.com/EddyLB">Eddy Lelièvre-Berna</a></p>
        <p><a href="https://github.com/voriondev">Valentin Baizeau</a></p>
        <p>Chiraag Nataraj</p>
        <p><a href="https://github.com/radass1996">Radko Varchola</a></p>
        <p><a href="https://github.com/Walikdik">Gabriel Gábor</a></p>
        <p><a href="https://github.com/coolo">Stephan Kulow</a></p>
        ]]>
    </string>
    <string name="libraries" translatable="false"><![CDATA[
        <p><a href="https://github.com/ACRA/acra">ACRA - Application Crash Reports for Android</a>, license <a href="http://www.apache.org/licenses/LICENSE-2.0">APACHE-2.0</a></p>
        <p><a href="http://square.github.io/picasso/">Picasso</a>, license <a href="http://www.apache.org/licenses/LICENSE-2.0">APACHE-2.0</a></p>
        <p><a href="http://square.github.io/okhttp3/">Okhttp3</a>, license <a href="http://www.apache.org/licenses/LICENSE-2.0">APACHE-2.0</a></p>
        <p><a href="http://square.github.io/retrofit2/">Retrofit2</a>, license <a href="http://www.apache.org/licenses/LICENSE-2.0">APACHE-2.0</a></p>
        <p><a href="https://square.github.io/leakcanary">LeakCanary</a>, license <a href="http://www.apache.org/licenses/LICENSE-2.0">APACHE-2.0</a></p>
        <p><a href="https://github.com/JakeWharton/picasso2-okhttp3-downloader">Picasso 2 OkHttp 3 Downloader</a>, license <a href="http://www.apache.org/licenses/LICENSE-2.0">APACHE-2.0</a></p>
        <p><a href="https://github.com/ReactiveX/RxJava/">ReactiveX/RxJava</a>, license <a href="http://www.apache.org/licenses/LICENSE-2.0">APACHE-2.0</a></p>
        <p><a href="https://github.com/ReactiveX/RxAndroid/">ReactiveX/RxAndroid</a>, license <a href="http://www.apache.org/licenses/LICENSE-2.0">APACHE-2.0</a></p>
        <p><a href="https://github.com/JorgeCastilloPrz/FABProgressCircle/">JorgeCastilloPrz/FABProgressCircle</a>, license <a href="http://www.apache.org/licenses/LICENSE-2.0">APACHE-2.0</a></p>
        <p><a href="https://github.com/leinardi/FloatingActionButtonSpeedDial/">FloatingActionButtonSpeedDial</a>, license <a href="http://www.apache.org/licenses/LICENSE-2.0">APACHE-2.0</a></p>
        <p><a href="https://github.com/tingyik90/snackprogressbar/">tingyik90/SnackProgressBar</a>, license <a href="http://www.apache.org/licenses/LICENSE-2.0">APACHE-2.0</a></p>
        <p><a href="https://github.com/greenrobot/EventBus/">greenrobot/EventBus</a>, license <a href="http://www.apache.org/licenses/LICENSE-2.0">APACHE-2.0</a></p>
        <p><a href="https://commons.apache.org/proper/commons-lang/">Apache Commons Lang</a>, license <a href="http://www.apache.org/licenses/LICENSE-2.0">APACHE-2.0</a></p>
        <p><a href="https://github.com/vipulasri/TicketView">TicketView</a>, license <a href="http://www.apache.org/licenses/LICENSE-2.0">APACHE-2.0</a></p>
        <p>appcompat, support-annotations, cardview, design, constraint-layout, recyclerview, design, preference, exifinterface, guava, dagger, room license <a href="http://www.apache.org/licenses/LICENSE-2.0">APACHE-2.0</a></p>
        ]]></string>
    <string name="album_empty">Empty</string>
    <plurals name="album_photos">
        <item quantity="one">1 photo</item>
        <item quantity="other">%1$d photos</item>
    </plurals>
    <plurals name="album_photos_subs">
        <item quantity="one">1 photo in sub-albums</item>
        <item quantity="other">%1$d photos in sub-albums</item>
    </plurals>
    <string name="privacy_text">Piwigo-Android and Piwigo-Mobile are free, libre and open source client applications for Piwigo galleries. This privacy policy applies to these native Android and iOS applications, connecting to Piwigo sites which are out of the control of the authors. Check the privacy policy of the corresponding sites before configuring an account in Piwigo-Android or Piwigo-Mobile to connect to a gallery.</string>
    <string name="privacy_last_update">Last updated October 25, 2018</string>
    <string name="privacy_intro_title">Introduction</string>
    <string name="privacy_intro_text1">Developers of Piwigo-Android and Piwigo-Mobile, we (or “us” or “our”) respect the privacy of our users (“user” or “you”). This Privacy Policy explains how we collect, use, disclose, and safeguard your information when you use our mobile applications (the “Applications”). Our names can be extracted from the meta data in the git repositories and within the Applications.</string>
    <string name="privacy_intro_text2">Please read this Privacy Policy carefully. If you do not agree with the terms of this Privacy Policy, please do not access the Applications.</string>
    <string name="settings_albums_title">Albums</string>
    <string name="settings_download_size">Download Size</string>
    <string name="settings_images">Images</string>
    <string name="settings_photos_per_row">Photos per Row</string>
    <string name="settings_download_size_summary">Photo size \'%1$s\' will be used for download</string>
    <string name="fab_create_album">Create album</string>
    <string name="fab_create_subalbum">Create sub-album</string>
    <string name="fab_upload_photos">Upload photos</string>
</resources>