<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/nav_group_features"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_albums"
            android:icon="@drawable/ic_action_folder"
            android:title="@string/nav_albums" />
        <item
            android:id="@+id/nav_upload"
            android:checkable="true"
            android:icon="@drawable/ic_action_cloud_upload"
            android:title="@string/nav_upload" />
    </group>
    <group
        android:id="@+id/nav_group_accounts"
        android:checkableBehavior="single"
        android:visible="true">
        <item
            android:id="@+id/nav_manage_accounts"
            android:checkable="true"
            android:icon="@drawable/ic_action_account_manage"
            android:title="@string/nav_manage_accounts"/>
    </group>
    <group
        android:id="@+id/nav_group_settings"
        android:checkableBehavior="single">
<!--        <item
            android:id="@+id/nav_settings"
            android:checkable="true"
            android:icon="@drawable/ic_action_settings"
            android:title="@string/nav_settings" />
            -->
        <item
            android:id="@+id/nav_about"
            android:checkable="true"
            android:icon="@drawable/ic_action_help"
            android:title="@string/nav_about" />
    </group>
</menu>